Frontend: fix issue with several chat misaligned when next to each other

--- a/ahoy_frontend/src/index.css
+++ b/ahoy_frontend/src/index.css
@@ -22,3 +22,8 @@ code {
   max-width: 240px;
   word-wrap: break-word;
 }
+
+.message-textarea {
+  height: 75px;
+  resize: none;
+}
